                                                               B -> []
                                                               C -> []
                                                               D -> []
                                                snapshot_revd -> bool
                                            B : local_state -> int
                                               channel_state : A -> []
                                                               B -> []
                                                               C -> []
                                                               D -> []
                                                snapshot_revd -> bool
                                            C : local_state -> int
                                               channel_state : A -> []
                                                               B -> []
                                                               C -> []
                                                               D -> []
                                                snapshot_revd -> bool
                                            D : local_state -> int
                                               channel_state : A -> []
                                                               B -> []
                                                               C -> []
                                                               D -> []
                                                snapshot_revd -> bool



--------
We need to do reverse lookup of the connected_to list to get the expected count of markers on the receiving channels.
Need to handle the case when multiple messages arrive at the socket, since we are now using pickle. - done
Handled the case when the first marker is the last marker we are expecting
Maintaining an Enum Event for all event types.
lets connect to our own client as well, just to simplify the logic.