@@ -92,3 +92,4 @@ Need to handle the case when multiple messages arrive at the socket, since we ar
 Handled the case when the first marker is the last marker we are expecting
 Maintaining an Enum Event for all event types.
 lets connect to our own client as well, just to simplify the logic.
+When initiating a new snapshot, the current balance should be recorded immediately, to avoid discrepancy.
